<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:id="@+id/linearLayout">
        <Button
                android:text="@string/start_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/startbutton" android:layout_marginTop="8dp"
                android:onClick="startReport"/>
        <Button
                android:text="@string/end_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stopbutton" android:layout_marginTop="8dp"
                android:onClick="stopReport"
                tools:visibility="gone"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
            android:layout_width="395dp"
            android:layout_height="491dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/reportRecyclerView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.095"
            android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/reportinterval"/>
    <TextView
            android:text="@string/report_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reportinterval"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp"/>

</android.support.constraint.ConstraintLayout>